refact: replace deprecated calls with new replacements